do: diplom project

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,3 +8,5 @@
 @import 'blocks/header'
 // Подклчаем блок о книге
 @import 'blocks/theory'
+// Подключаем стили для книг
+@import 'blocks/magazine'
