do: diplom project

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 // Подклчаем блок о книге
 @import 'blocks/theory'
+// Подключаем first-slider
+@import 'blocks/first-slider'
 // Подключаем стили для книг
 @import 'blocks/magazine'
