--- a/sass/blocks/_magazine.sass
+++ b/sass/blocks/_magazine.sass
@@ -42,13 +42,15 @@
 .book
   &-container
     display: flex
-    max-width: 358px
+    width: 358px
     border: 1px solid #ECEEF2
     border-radius: 8px
     padding: 11px
   &-description
     display: flex
     flex-direction: column
+    &__right
+      margin-top: 9px
   &-img
     margin-right: 20px
     &__first
@@ -66,6 +68,7 @@
     line-height: 32px
     letter-spacing: 0.2px
     margin-bottom: 16px
+    margin-top: 13px
     font-weight: bold
   &-category
     font-size: 16px
@@ -103,6 +106,7 @@
   &-container
     column-gap: 32px
     display: flex
+    margin-bottom: 79px
 .best
   &-mounth
     &-title
@@ -122,11 +126,14 @@
     flex-wrap: wrap
     border-radius: 8px 8px 0 0
     padding: 24px
-    padding-bottom: 26px
     row-gap: 36px
     &__right
       border: none
       padding: 0
+      width: 312px
+    &-line
+      background-color: rgba(179,186,197,0.1)
+      padding: 0 24px
   &-button
     background-color: rgba(179, 186, 197, 0.1)
     color: $blue
@@ -138,5 +145,6 @@
     border-radius: 0 0 8px 8px
     border: none
     font-weight: bold
-hr
-  border: 1px solid #ECEEF2
+.line
+  height: 1px
+  background-color: #ECEEF2
