--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/theory'
 // Подключаем first-slider
 @import 'blocks/first-slider'
+// Подключаем unrealised
+@import 'blocks/unrealised'
 // Подключаем стили для книг
 @import 'blocks/magazine'
