--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/first-slider'
 // Подключаем unrealised
 @import 'blocks/unrealised'
+// Подключаем раздел про видео
+@import 'blocks/author-story'
 // Подключаем стили для книг
 @import 'blocks/magazine'
