--- a/sass/blocks/_author-story.sass
+++ b/sass/blocks/_author-story.sass
@@ -1,3 +1,5 @@
+.author-container
+  width: 1005px
 .author-story
   padding-top: 76px
   padding-bottom: 100px
@@ -22,3 +24,57 @@
     line-height: 32px
     color: #5A7184
     width: 390px
+  &__videos
+    display: flex
+    flex-wrap: wrap
+    row-gap: 30px
+.story
+  &-videos
+    &-buttom
+      display: flex
+      column-gap: 30px
+      &__elem
+        position: relative
+      &__description
+        display: flex
+        flex-direction: column
+.story
+  &-videos
+    &-main
+      position: relative
+      &__button
+        background-color: #ffffff
+        border-radius: 50%
+        width: 100px
+        height: 100px
+        border: none
+        background-repeat: no-repeat
+        background-position: center
+        position: absolute
+        transform: translateY(-50%)
+        z-index: 99
+        cursor: pointer
+        &--main
+          background-image: url(../img/blue-play.svg)
+          top: 50%
+          right: 45%
+.play
+  position: absolute
+  top: 28%
+  right: 45%
+.buttom
+  &-image
+    margin-bottom: 22px
+  &-name
+    margin-bottom: 10px
+    font-family: Roboto
+    font-weight: bold
+    font-size: 22px
+    line-height: 32px
+    letter-spacing: 0.2px
+    color: #183B56
+  &-description
+    font-family: Open Sans
+    font-size: 16px
+    line-height: 22px
+    color: #5A7184
