--- a/sass/blocks/_author-story.sass
+++ b/sass/blocks/_author-story.sass
@@ -37,7 +37,7 @@
         position: relative
       &__description
         display: flex
-        flex-direction: column
+        justify-content: space-between
 .story
   &-videos
     &-main
