do: block ehya for diplom

--- a/sass/blocks/_author-story.sass
+++ b/sass/blocks/_author-story.sass
@@ -1,5 +1,7 @@
 .author-container
   width: 1005px
+  padding-left: 51px
+  padding-right: 84px
 .author-story
   padding-top: 76px
   padding-bottom: 100px
