--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,3 +16,7 @@
 @import 'blocks/author-story'
 // Подключаем стили для книг
 @import 'blocks/magazine'
+// Подключаем иконки издателей
+@import 'blocks/publishers'
+// Подключаем раздел с блогом
+@import 'blocks/blog'
