do: diplom project

--- a/sass/blocks/_blog.sass
+++ b/sass/blocks/_blog.sass
@@ -1,6 +1,6 @@
 .blog
   padding-top: 100px
-  padding-bottom: 106px
+  padding-bottom: 100px
   &-title
     font-family: Roboto Condensed
     font-weight: bold
@@ -76,6 +76,8 @@
     color: $text-color
     width: 262px
     margin-bottom: 18px
+    &--biggest
+      width: 266px
   &-read
     font-family: Roboto Condensed
     font-weight: bold
