--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,3 +20,5 @@
 @import 'blocks/publishers'
 // Подключаем раздел с блогом
 @import 'blocks/blog'
+// Подключаем раздел с регистрацией
+@import 'blocks/know-first'
