do: diplom project

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,3 +22,5 @@
 @import 'blocks/blog'
 // Подключаем раздел с регистрацией
 @import 'blocks/know-first'
+// Подключаем footer
+@import 'blocks/footer'
