do: makrt for diplom without adaptive

--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,6 +1,7 @@
 .footer
   &-wrapper
     display: flex
+    margin-bottom: 96px
   &-ehya
     width: 263px
     display: flex
@@ -32,3 +33,17 @@
   &__link
     text-decoration: none
     margin-right: 6px
+.copyright
+  display: flex
+  align-items: center
+  flex-direction: column
+  margin-bottom: 80px
+  &__link
+    margin-bottom: 24px
+  &__words
+    font-family: Open Sans
+    font-weight: 600
+    font-size: 16px
+    line-height: 22px
+    text-align: center
+    color: #5A7184
