--- a/sass/blocks/_unrealised.sass
+++ b/sass/blocks/_unrealised.sass
@@ -19,25 +19,26 @@
     justify-content: space-between
     column-gap: 24px
     margin-bottom: 60px
-  &__button
-    width: 54px
-    height: 56px
-    border-radius: 2000px
-    border: solid 2px #5a7184
-    color: #5a7184
-    background-repeat: no-repeat
-    background-position: center
-    background-color: $text-color
-    &--next
-      background-image: url(../img/icon-next-unrealised.svg)
-      transform: rotate(-180deg)
-      border-color: #FFF
-    &--prev
-      background-image: url(../img/icon-unrealised.svg)
-      transform: rotate(-180deg)
-  &-books
-    &-images
-      display: flex
-      justify-content: space-between
-      &__elem
-        width: 204px
+  &-slider
+    &__button
+      width: 54px
+      height: 56px
+      border-radius: 2000px
+      border: solid 2px #5a7184
+      color: #5a7184
+      background-repeat: no-repeat
+      background-position: center
+      background-color: $text-color
+      &--next
+        background-image: url(../img/icon-next-unrealised.svg)
+        transform: rotate(-180deg)
+        border-color: #FFF
+      &--prev
+        background-image: url(../img/icon-unrealised.svg)
+        transform: rotate(-180deg)
+  &-slider
+    display: flex
+    justify-content: space-between
+    overflow: hidden
+    &__elem
+      width: 204px
