do: diplom project

--- a/sass/blocks/_magazine.sass
+++ b/sass/blocks/_magazine.sass
@@ -100,8 +100,12 @@
     padding: 0
     background-color: $text-color
     color: $light
+    border: none
 .heart
   margin-right: 15px
+  &:hover
+    cursor: pointer
+    filter: invert(31%) sepia(93%) saturate(7039%) hue-rotate(355deg) brightness(91%) contrast(124%)
 .books
   &-container
     column-gap: 32px
