--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,5 +22,7 @@
 @import 'blocks/blog'
 // Подключаем раздел с регистрацией
 @import 'blocks/know-first'
+// Подключаем модальное окно
+@import 'blocks/modal'
 // Подключаем footer
 @import 'blocks/footer'
